--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-scapy==2.4.5
-psutil==5.8.0
-matplotlib==3.4.3
+scapy==2.5.0
+psutil==5.9.5
+matplotlib==3.7.2
+tabulate==0.9.0
+pytest==7.4.0
+pytest-cov==4.1.0
+flake8==6.1.0
+black==23.7.0
+isort==5.12.0
+ipaddress==1.0.23
